[gd_scene load_steps=4 format=3 uid="uid://b6mjda2nau3xk"]

[ext_resource type="Texture2D" uid="uid://cwmcbticqgj6n" path="res://imagenes/Espacio vacio mazo tdvs.png" id="1_iks34"]
[ext_resource type="Script" uid="uid://drvohdv27bwvs" path="res://mostrador_set/ficha_set_mostrador/ficha_set_mostrador.gd" id="2_l7t7j"]
[ext_resource type="Texture2D" uid="uid://lcorwv774y3v" path="res://imagenes/interfaz_combate/Escencia.png" id="3_40bh1"]

[node name="FichaSetMostrador" type="TextureRect"]
custom_minimum_size = Vector2(200, 50)
texture = ExtResource("1_iks34")
script = ExtResource("2_l7t7j")

[node name="CosteTexture" type="TextureRect" parent="."]
visible = false
layout_mode = 0
offset_left = 153.0
offset_top = 5.0
offset_right = 193.0
offset_bottom = 45.0
texture = ExtResource("3_40bh1")

[node name="CosteLabel" type="Label" parent="CosteTexture"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -11.5
offset_right = 20.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
text = "$"
horizontal_alignment = 1
